# kachina-installer

./: .gitignore  README.md  package.json  pnpm-lock.yaml  rsbuild.config.ts
.github/workflows/: build.yml
src/: App.vue  Checkbox.vue  CircleSuccess.vue  Cloud.vue  CloudPaid.vue  Dialog.vue  FInput.vue  Feedback.vue  IconClose.vue  IconEdit.vue  IconMinimize.vue  IconSheild.vue  consts.ts  dfs.ts  downloadTaskManager.ts  env.d.ts  index.css  index.ts  mirrorc-errors.ts  networkInsights.ts  tauri.ts  types.d.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/libs/hdiff-sys/: .gitattributes  Cargo.toml  binding.rs  build.rs  wrapper.h
src-tauri/libs/hdiff-sys/HDiff/: diff.cpp  diff.h  diff_types.h
src-tauri/libs/hdiff-sys/HDiff/private_diff/: bytes_rle.cpp  bytes_rle.h  compress_detect.h  pack_uint.h  suffix_string.cpp
src-tauri/libs/hdiff-sys/HDiff/private_diff/libdivsufsort/: divsufsort.c.inc.h
src-tauri/libs/hdiff-sys/HDiff/private_diff/limit_mem_diff/: bloom_filter.h  digest_matcher.cpp
src-tauri/libs/hdiff-sys/src/: lib.rs
src-tauri/libs/hpatch-sys/: .gitattributes  Cargo.toml  binding.rs  build.rs  wrapper.h
src-tauri/libs/hpatch-sys/HPatch/: patch.c
src-tauri/libs/hpatch-sys/src/: lib.rs
src-tauri/src/: cli.rs  dfs.rs  fs.rs  h3middleware.rs  h3support.rs  installer.rs  ipc.rs  local.rs  main.rs  pack.rs  progressed_read.rs  sftp_middleware.rs  ssh_middleware.rs  static_obj.rs  uac.rs  utils.rs
src-tauri/src/builder/: append.rs  extract.rs  gen.rs  local.rs  main.rs  metadata.rs  pack.rs  pcli.rs  replace_bin.rs
src-tauri/src/builder/cli/: mod.rs
src-tauri/src/builder/utils/: mod.rs
src-tauri/src/capabilities/: h3.rs  mod.rs  sftp.rs  ssh.rs
src-tauri/src/cli/: arg.rs  mod.rs
src-tauri/src/installer/: config.rs  lnk.rs  mod.rs  registry.rs  runtimes.rs  uninstall.rs
src-tauri/src/ipc/: install_file.rs  manager.rs  mod.rs  operation.rs
src-tauri/src/module/: mod.rs  wv2.rs
src-tauri/src/utils/: acl.rs  dir.rs  download_monitor.rs  error.rs  gui.rs  hash.rs  icon.rs  metadata.rs  mod.rs  progressed_read.rs  sentry.rs  uac.rs  url.rs  wincred.rs
src/api/: installFile.ts  ipc.ts
src/components/: SafeIcon.vue
src/plugins/: index.ts  registry.ts  types.ts
src/plugins/github/: index.ts
src/utils/: friendlyError.ts  svgSanitizer.ts  version.ts
tests/: offline-install.mjs  offline-update.mjs  online-install.mjs  online-update.mjs  prepare.mjs  server.mjs  utils.mjs
