cargo-features = ["profile-rustflags", "trim-paths"]
[package]
name = "kachina-installer"
version = "0.1.0"
description = "Unified installer and upgrader"
authors = ["YuehaiTeam"]
edition = "2021"
default-run = "kachina-installer"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", default-features = false, features = [
    "wry",
    "devtools",
] }
tauri-utils = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
async-compression = { version = "0.4", features = ["tokio", "zstd", "zstdmt"] }
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "fs",
    "io-util",
    "process",
    "macros",
    "net",
] }
chksum-md5 = { version = "0.1", features = ["async-runtime-tokio"] }
reqwest = { version = "0.12", default-features = false, features = [
    "http2",
    "json",
    "native-tls",
    "native-tls-alpn",
    "charset",
    "gzip",
    "zstd",
    "stream",
] }
futures = "0.3"
tokio-util = { version = "0.7", features = ["io-util"] }
async-walkdir = "2.0"
windows = { version = "0.61.1", features = [
    "Win32_System_Console",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_Security_Authorization",
    "Win32_Security_Credentials",
    "Security",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
] }
rfd = { version = "0.15", default-features = false, features = [
    "tokio",
    "common-controls-v6",
] }
nt_version = "0.1"
lazy_static = "1.5"
open = { version = "5.3.1", features = ["shellexecute-on-windows"] }
mslnk = "=0.1"
twox-hash = "2.1.0"
pin-project = "1.1.7"
fmmap = { version = "0.4", features = ["tokio"] }
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4.39"
uuid = { version = "1.16", features = ["v4"] }
hpatch-sys = { path = "./libs/hpatch-sys" }
hdiff-sys = { path = "./libs/hdiff-sys" }
ignore = "0.4.23"
num_cpus = "1.16.0"
indicatif = { version = "0.17.9", features = ["tokio"] }
console = "0.15.10"
rcedit = { version = "0.1.0", git = "https://github.com/Devolutions/rcedit-rs.git" }
windows-registry = "0.5"
sentry = { version = "0.37.0", features = [
    "contexts",
    "contexts",
    "transport",
    "reqwest",
    "native-tls",
], default-features = false }
tracing-subscriber = { version = "0.3", features = ["fmt", "registry"] }
sentry-tracing = "0.37"
zip = { git = "https://github.com/xytoki/zip2.git", default-features = false, features = [
    "deflate",
    "deflate64",
    "zstd",
] }
anyhow = "1.0"
reqwest-middleware = "0.4"
tracing = "0.1"
whoami = "1.6.0"
win32-version-info = "0.2.0"

[[bin]]
name = "kachina-installer"
path = "src/main.rs"

[[bin]]
name = "kachina-builder"
path = "src/builder/main.rs"

[profile.dev]
incremental = true # Compile your binary in smaller steps.
rustflags = ["-Zthreads=8"] # Better compile performance.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
trim-paths = "all" # Removes potentially privileged information from your binaries.
rustflags = ["-Cdebuginfo=0", "-Zthreads=8"] # Better compile performance.
